# hook-loop

./: .gitignore  AGENTS.md  DEVELOPMENT.md  ISSUE.md  README.md  hook-loop.json  opencode.json  pyproject.toml
.codex-home/: config.toml  hooks.json
.opencode/plugins/: hook_loop.js
docs/research/cwc-long-running-agents/: readme.md
docs/research/loop-engineering-2026-patterns/: readme.md
docs/research/pi-autoresearch/: readme.md
docs/superpowers/plans/: 2026-05-16-hook-loop-dsl-cli-plan.md  2026-05-16-hook-loop-runtime-plan.md
docs/superpowers/specs/: 2026-05-16-hook-loop-agent-design.md
examples/: plan_execute.json  software_delivery.json
experiments/: check_gallery_behavior.py  drive_plan_execute_with_opencode.py  gallery-check-report.md  probe_opencode_mismatches.py
gallery/: README.md  agent_handoff.json  approval_gate.json  autoresearch_experiment.json  builder_evaluator.json  multi_agent_fanout.json  plan_execute.json  rework_loop.json  safety_guardrail.json
src/hook_loop/: __init__.py  cli.py  codex_adapter.py  codex_mapping.py  codex_scaffold.py  driver.py  dsl.py  evaluator.py  events.py  hooks.py  opencode_adapter.py  opencode_scaffold.py  runtime.py  schema.py  state_machine.py  store.py
tests/: test_cli.py  test_codex_adapter.py  test_codex_mapping.py  test_codex_scaffold.py  test_driver.py  test_dsl.py  test_evaluator.py  test_event_store.py  test_hooks.py  test_opencode_adapter.py  test_opencode_scaffold.py  test_package_import.py  test_runtime_simulation.py  test_state_machine.py
